<resources>
    <string name="m_algorithm_2tree">二叉树</string>
    <string name="m_algorithm_2tree_before">二叉树前序</string>
    <string name="m_algorithm_2tree_in">二叉树中序</string>
    <string name="m_algorithm_2tree_Rear">二叉树后序</string>
    <string name="m_algorithm_clear">清除（重置数据）</string>
    <string name="m_algorithm_create_tree">创建二叉树</string>
    <string name="m_algorithm_2tree_node_count">节点个数</string>

    <string name="m_algorithm_sort">排序</string>
    <string name="m_algorithm_sort_bubble">冒泡</string>

    <string name="m_algorithm_sort_fast_pit">快速排序(坑)</string>
    <string name="m_algorithm_sort_fast_pointer">快速排序(指针)</string>

    <string name="m_algorithm_arr">数组系列</string>
    <string name="m_algorithm_arr_Intersection">数组交集</string>
    <string name="m_algorithm_arr_public_prefix">数组公共最长前缀</string>
    <string name="m_algorithm_arr_sale_time">股票最佳买卖时机</string>
    <string name="m_algorithm_arr_spin">翻转</string>
    <string name="m_algorithm_arr_in_situ_delete">原地删除</string>
    <string name="m_algorithm_arr_add_one">加一</string>
</resources>
